--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,7 +11,8 @@
 }
 
 .nav__theme {
-  margin-top: 0.4em;
+  margin-top: 0.1em;
+  margin-bottom: 1.2em;
 }
 
 @media (max-width: 600px) {
@@ -37,3 +38,4 @@
     margin-left: 0.8em;
   }
 }
+
