--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,3 +1,8 @@
+.projects::before{
+  display:block;
+  content: '';
+  height: 200px;
+}
 .projects__grid {
   max-width: 1100px;
   margin: 0 auto;
