--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,11 @@ main {
   margin-bottom: 1em;
   text-transform: uppercase;
 }
+.project__title{
+  text-align: left;
+  margin-bottom: 1em;
+  text-transform: uppercase;
+}
 
 .center {
   display: flex;
@@ -157,9 +162,43 @@ main {
 }
 
 
-
 @media (max-width: 600px) {
   .section {
     margin-top: 4em;
+  }
+}
+
+.laptop {
+  animation-name: laptop-animation; /* Refers to the name of your @keyframes element below */
+  animation-duration: 2.1s; /* Change to speed up or slow down */
+  animation-iteration-count: infinite; /* Never stop waving :) */
+  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+  display: inline-block;
+}
+
+@keyframes laptop-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  } /* The following five values can be played with to make the waving more or less extreme */
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  } /* Reset for the last half to pause */
+  100% {
+    transform: rotate(0deg);
   }
 }
