--- a/src/components/ProjectContainer/ProjectContainer.css
+++ b/src/components/ProjectContainer/ProjectContainer.css
@@ -10,27 +10,21 @@
   transform: translateY(-7px);
 }
 
-.project__description {
-  margin-top: 1em;
-}
-
 .project__stack {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-right: 2em;
+  margin: 1.2em 0;
 }
 
 .project__stack-item {
   margin: 0.5em;
   font-weight: 500;
-  font-size: 1.8rem;
+  font-size: 0.8rem;
+  color: var(--clr-fg-alt);
 }
 
 .project .link--icon {
   margin-left: 0.5em;
 }
-.proj1{
-  height: 15rem;
-  width: 15rem;
-}
+
