--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,7 +1,7 @@
 .projects::before{
   display:block;
   content: '';
-  height: 200px;
+  height: 400px;
 }
 .projects__grid {
   max-width: 1100px;
@@ -9,4 +9,13 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
   grid-gap: 2em;
+}
+.container--seemore{
+  margin-top: 10px;
+}
+.see-more{
+  font-size: 1em;
+}
+.see-more:hover{
+  color: var(--clr-primary);
 }
