--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,5 +1,10 @@
+.white--space::before{
+  display:block;
+  content: '';
+  height: 100px;
+}
 .skills__list {
-  max-width: 450px;
+  max-width: 750px;
   width: 95%;
   margin: 0 auto;
   display: flex;
@@ -9,4 +14,8 @@
 
 .skills__list-item {
   margin: 0.5em;
+}
+.skills--icons{
+  height: 8em;
+  width: 8em;
 }
